# ill-allow-it

./: .gitignore  Cargo.toml  Info.plist  README.md  build-app.sh
src/: accessibility.rs  app.rs  config.rs  keystroke.rs  main.rs  monitor.rs  process.rs  rules.rs  types.rs
